--- a/formcheck.html
+++ b/formcheck.html
@@ -16,7 +16,7 @@
     Text      <input size="100" type="Text" name="Text_name" id="f4">
     <br> <br>
     <button type="submit">Submit</button>
-	<input type="button" value="Бесплатные курсы по OpenCart" onClick='location.href="https://gnidan12345.github.io/script210121/form.html"'>
+	<input type="button" value="Бесплатные курсы по OpenCart" onClick='location.href="https://gnidan12345.github.io/pixel2101/form.html"'>
     <br> <br>
     
 </form>
